[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/CharactersInfo.gd" type="Script" id=2]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menus/ButtonFont.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_color = Color( 0.992157, 0.956863, 0.956863, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="CharactersInfo" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_top = -0.949982
margin_right = 1022.0
margin_bottom = 598.05
color = Color( 0.933333, 0.615686, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="Background"]
margin_left = 785.324
margin_top = 37.0
margin_right = 973.324
margin_bottom = 101.0
custom_fonts/font = ExtResource( 4 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -177.0
margin_top = 12.0
margin_right = 177.0
margin_bottom = 115.0
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background/HBoxContainer"]
margin_right = 354.0
margin_bottom = 103.0
rect_min_size = Vector2( 300, 40 )
alignment = 1

[node name="LeftButton" type="Button" parent="Background/HBoxContainer/HBoxContainer"]
margin_right = 73.0
margin_bottom = 103.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 3 )
text = "←"

[node name="CharacterName" type="Label" parent="Background/HBoxContainer/HBoxContainer"]
margin_left = 77.0
margin_top = 34.0
margin_right = 277.0
margin_bottom = 69.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 1 )
text = "Engineer"
align = 1
valign = 1

[node name="RightButton" type="Button" parent="Background/HBoxContainer/HBoxContainer"]
margin_left = 281.0
margin_right = 354.0
margin_bottom = 103.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 3 )
text = "→"

[node name="CharacterDescription" type="Label" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -453.0
margin_top = -162.5
margin_right = 460.0
margin_bottom = -96.5
custom_fonts/font = SubResource( 2 )
text = "The Engineer is a long-range, high-damage character that shoots different types of projectiles. At the same
 time, she is very immobile and weak. For this reason, her gameplay revolves  around running away from her
 enemies and then attacking them from a save distance."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicAttack" type="Label" parent="Background"]
margin_left = 53.6037
margin_top = 229.126
margin_right = 250.604
margin_bottom = 266.126
custom_fonts/font = SubResource( 3 )
text = "Basic Attack"

[node name="BasicAttackDescription" type="Label" parent="Background"]
margin_left = 308.812
margin_top = 224.271
margin_right = 869.812
margin_bottom = 267.271
custom_fonts/font = SubResource( 4 )
text = "She shoots an enemy with her crossbow, dealing moderate damage.
This attack is medium-range and can be casted while moving."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q" type="Label" parent="Background"]
margin_left = 53.6037
margin_top = 289.126
margin_right = 151.604
margin_bottom = 326.126
custom_fonts/font = SubResource( 3 )
text = "Q Skill"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QDescription" type="Label" parent="Background"]
margin_left = 308.812
margin_top = 284.271
margin_right = 905.812
margin_bottom = 327.271
custom_fonts/font = SubResource( 4 )
text = "She uses her gun to shoot a bullet that will traverse the map until it hits 
an enemy or wall."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="Label" parent="Background"]
margin_left = 53.6037
margin_top = 350.126
margin_right = 162.604
margin_bottom = 387.126
custom_fonts/font = SubResource( 3 )
text = "W Skill"

[node name="WDescription" type="Label" parent="Background"]
margin_left = 308.812
margin_top = 344.271
margin_right = 927.812
margin_bottom = 387.271
custom_fonts/font = SubResource( 4 )
text = "She shoots a hook which, after hitting a wall, pulls the Engineer towards it.
This skill has long CD."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="Label" parent="Background"]
margin_left = 53.6037
margin_top = 417.126
margin_right = 149.604
margin_bottom = 454.126
custom_fonts/font = SubResource( 3 )
text = "E Skill"

[node name="EDescription" type="Label" parent="Background"]
margin_left = 308.812
margin_top = 404.271
margin_right = 940.812
margin_bottom = 470.271
custom_fonts/font = SubResource( 4 )
text = "She shoots a slow grenade that bounces on walls. After hitting an enemy or 
reaching the maximum number of bounces, the grenade explodes, dealing
AoE damage. There can be up to 3 grenades in the game at the same time."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="Label" parent="Background"]
margin_left = 53.6037
margin_top = 512.126
margin_right = 149.604
margin_bottom = 549.126
custom_fonts/font = SubResource( 3 )
text = "R Skill"

[node name="RDescription" type="Label" parent="Background"]
margin_left = 306.812
margin_top = 487.271
margin_right = 1000.81
margin_bottom = 576.271
custom_fonts/font = SubResource( 4 )
text = "After a 4-second casting, she takes out her giant gun which she can use to shoot
up to 10 times. These shots have unlimited range and go through everything,
dealing great damage to every enemy they hit. If the Engineer receives CC or moves
during the casting or skill time, the skill resets and the CD starts from 0."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Background/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Background/HBoxContainer/HBoxContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="Background/HBoxContainer/HBoxContainer/RightButton" to="." method="_on_RightButton_pressed"]
